# SlayGurl-Programing-Language

./: .gitignore  README.md
code/: main.py  syntax_tree.py
rust-compiler/: Cargo.toml
rust-compiler/src/: main.rs
sg_test_files/: box_draw.sg  even_odd.sg  factorial_recursion.sg  guess_random_number.sg  main.sg  secret.sg
sg_theme/: CHANGELOG.md  README.md  package-lock.json  package.json  text.txt  vsc-extension-quickstart.md
sg_theme/syntaxes/: sg.tmLanguage.json
sg_theme/themes/: slay-theme.json
